--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -71,7 +71,7 @@ Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
 | Power Management
 | [[NXP PCF50633]] 04 N3
 |-
-| &nbsp;&nbsp; '''Flash'''
+| Flash
 | 
 |-
 | &nbsp;&nbsp; NAND Flash
@@ -101,18 +101,16 @@ Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
 | microSD 
 | Supported trought the [[Smedia Glamo 3362]]
 |-
-| &nbsp;&nbsp; '''LCD'''
+| LCD
 |
 |-
 | &nbsp;&nbsp; LCD Module (LCM) 
 | [[TPO TD028TTEC1]] module
 |-
-| style='vertical-align:top' | &nbsp;&nbsp; Touch Screen
-| 
-* Connected to: S3C2442 TS controller
-* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_touchscreen.patch
+| &nbsp;&nbsp; Touch Screen
+| More info, see [[TPO TD028TTEC1]]
 |-
-| &nbsp;&nbsp; '''Bluetooth'''
+| Bluetooth
 |
 |-
 | &nbsp;&nbsp; Bluetooth Module
@@ -136,7 +134,7 @@ Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
 | I2C is a simple communication standard intended to move small amounts of data a few inches between chips.
 Please see [[I2C | Neo I2C Devices]] for more information & a list of devices & the addresses currently in use & documented for the Neo1973.<br>
 |-
-| &nbsp;&nbsp; '''Audio'''
+| Audio
 | See also: [[Neo1973 Audio Subsystem]]
 |-
 | &nbsp;&nbsp; Wolfson Codec
