--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -57,9 +57,13 @@ It has its own preference settings to determine if points are plotted based on c
 
 It should also be possible to set what is logged. Possibilities include time, position, bearing, velocity, elevation, pseudo-range data, HDOP, PDOP, satellites used, type of GPS, type of antenna, DGPS on/off, type of DGPS.
 
-The data logger would be one crucial component in an application of GPS for bicyclists (and outdoor enthusiasts like hikers and runners.) Other requirements would be a good display (to substitute for a speedometer) and a good mapping program. 
+==== Speedometer, Pedomater -- Usage of logger by itself ====
+
+The data logger would be one crucial component in an application of GPS for bicyclists (and outdoor enthusiasts such as hikers and runners.) Other requirements would be a good display (to substitute for a speedometer) and a good mapping program. 
 
 Should we expand on that on this page? It would be neat to have something that interoperates with the GPS multiplexer and the data logger so maybe we should?
+
+Speedometer functions would include tracking minimums, maximums, averages for speed, distance, and elevation (stopped, moving, combined). Bicyclists (and runners? I am not a runner...) want to know total climb.
 
 ''I ride a bicycle and I use GPS as a speedometer and to do field work and I want to be able to do both with my Freerunner.'' [[User:Brian H Wilson|Brian H Wilson]] 19:38, 18 August 2008 (UTC)
 
