--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -30,7 +30,7 @@ User experiences - drops onto concrete - ... [[Neo1973 Robustness]]
 |
 |- 
 | Processor
-| Samsung S3C2410
+| [[Samsung S3C2410]]
 |-
 | Flash
 | 
