--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -32,11 +32,15 @@ Partial list of requirements for the multiplexer
 * Control external GPS connected via serial port (USB or bluetooth)
 * Feed data from the selected GPS receiver to multiple applications.
 * Handle a RTCM stream to allow realtime DGPS postprocessing.
-* Supply all attributes to applications, including such things as PDOP and satellites in use. (Not just time and position)
+* Supply all attributes to applications, including such things as bearing, PDOP and satellites in use. (Not just time and position).
+
+Angle / inclination -- it might be possible to use the accelerometers in the smartphone to determine current inclination and calculate percent grade. You'd have to be able to calibrate this: mount the smartphone in a bracket and then read the acceleratometers to set it to 0 when on level ground.
 
 ==== External GPS ====
 
 There is no reason we are limited to using the built-in GPS receiver. For applications requiring more accuracy (for example sub-meter), the GPS multiplexer should be able to accept data via USB or bluetooth and feed it to our applications. The controller program should be able to handle this situation.
+
+Bearing - some GPS receivers include an electronic compass that provides azimuth even when not moving. The multiplexer should know if bearing values are valid or not and indicate this. The value should indicate whether it is set for magnetic or true north.
 
 === Support for postprocessing? ===
 
