--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -60,5 +60,6 @@ It is probably a good idea to check that your battery is not greater than the st
 |
 |}
 
-
+== USB charger ==
+{{main|USB charger}}
 [[Category:GTA02 Hardware]]
