/* Anti Theft Application */

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -869,6 +869,8 @@ This application would enter the phone into an [[Anti-Theft Mode]] which activat
 
 Hmm, if you're away from your home for more than a few days (via GPS), it starts sending its coordinates home.
 
+You can make a password-protected list of your own phone number/numbers and when a card with other number is detected (and security feature is on) its number+gps data is send via sms to some 'secure phone' [friend's/sister's]. With thief's phone number its easy for police to track him.
+
 ====RFID based personal alerts====
 Assuming an RFID reader is available:  You'd put an RFID tag on your keys, wallet, etc and train a program on the phone to give you a soft or hard alert when one of them leaves detection range.  That way, if you're walking away from one of them, the phone could alert you.
 
