--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -96,14 +96,16 @@ There should be a desktop tool to manage transferring the data that has been col
 
 === RINEX ===
 
-Would RINEX be an appropriate general format for internal storage?
+Would RINEX be an appropriate general format for internal storage? No.
 It's an exchange format but it's intended to include data required to perform post-processing.
-It might be overkill for applications that don't require post-processing. 
+It stores direct satellite observations, not things needed for navigation like calculated position.
 
 Specs are here: ftp://ftp.unibe.ch/aiub/rinex/
 
 This guy wrote a program that takes Ublox Antares 4 data and writes it as RINEX data.
 http://home.comcast.net/~dmilbert/softs/ant2rin.htm
+
+GPX would accomodate everything we need but it's ASCII XML and that means 1/2 the file is just XML formatting. We'd probably be better off recording raw NMEA streams.
 
 == People working on this project ==
 
