--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -6,12 +6,12 @@ Questa pagina fornisce le istruzioni per installare Qtopia (la versione standard
 |__TOC__
 |}
 
-== Current status ==
-On 08 August 2008, Qtopia released the [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 latest flash image for the FIC Neo Freerunner (gta02)] containing the Qtopia 4.3.2 snapshot (Version: 4.3.2-080808) of 08 August 2008 (GPL version). 
+== Stato corrente ==
+L'8 Agosto2008 Qtopia ha rilasciato [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 l'ultima immagine flash per il FIC Neo Freerunner (gta02)] contentente losnapshot di Qtopia 4.3.2 (Versione: 4.3.2-080808) dell'8 Agosto 2008 (versione GPL). 
 
-This image can successfully make and receive calls and text messages.  It can read all contacts from the SIM card (which the updated 2007.2 does not appear to be able to do).  It contains apps that appear to be more stable than the ones found in the 2007.2 image.  It has multiple input methods that appear to be more mature.  It does not, however, have a web browser or a GPS application.
+Questa immagine può realmente fare e ricevere chiamate e messaggi di testo. Riesce a leggere tutti i contatti dalla scheda SIM (cosa che l'aggiornamento della 2007.2 sembra non sia in grado di fare). Contiene applicazioni che sembrano più stabilidi quelle che si trovano sill'immagine della 2007.2. Fornisce diversi metodi per l'inserimento dei caratteri che sembrano più maturi. Non ha, comunque, un browser Web, né alcuna applicazione per il GPS.
 
-You can find all the Qtopia images [http://www.qtopia.net/modules/mydownloads/viewcat.php?cid=6 here]
+Puoi trovare tutte le immagini di Qtopia [http://www.qtopia.net/modules/mydownloads/viewcat.php?cid=6 qui].
 
 == Option 1: Flashing Qtopia to FreeRunner ==
 
