--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -7,7 +7,7 @@ Questa pagina fornisce le istruzioni per installare Qtopia (la versione standard
 |}
 
 == Stato corrente ==
-L'8 Agosto2008 Qtopia ha rilasciato [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 l'ultima immagine flash per il FIC Neo Freerunner (gta02)] contentente losnapshot di Qtopia 4.3.2 (Versione: 4.3.2-080808) dell'8 Agosto 2008 (versione GPL). 
+L'8 Agosto2008 Qtopia ha rilasciato [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 l'ultima immagine flash per il Neo Freerunner della FIC (gta02)] contentente losnapshot di Qtopia 4.3.2 (Versione: 4.3.2-080808) dell'8 Agosto 2008 (versione GPL). 
 
 Questa immagine può realmente fare e ricevere chiamate e messaggi di testo. Riesce a leggere tutti i contatti dalla scheda SIM (cosa che l'aggiornamento della 2007.2 sembra non sia in grado di fare). Contiene applicazioni che sembrano più stabilidi quelle che si trovano sill'immagine della 2007.2. Fornisce diversi metodi per l'inserimento dei caratteri che sembrano più maturi. Non ha, comunque, un browser Web, né alcuna applicazione per il GPS.
 
