/* Option 1: Flashing Qtopia to FreeRunner */

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -13,9 +13,9 @@ Questa immagine può realmente fare e ricevere chiamate e messaggi di testo. Rie
 
 Puoi trovare tutte le immagini di Qtopia [http://www.qtopia.net/modules/mydownloads/viewcat.php?cid=6 qui].
 
-== Option 1: Flashing Qtopia to FreeRunner ==
+== Opzione 1: Flashare Qtopia sul FreeRunner ==
 
-Download the image mentioned above and follow the instructions here: [[Flashing the Neo FreeRunner]]
+Scarica l'immagine sopra indicata e segui queste istruzioni: [[Flashing the Neo FreeRunner]]
 
 == Option 2: Dual-Booting between Qtopia and 2007.2 (Qtopia boots from MicroSD card) ==
 
