--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -17,15 +17,15 @@ Puoi trovare tutte le immagini di Qtopia [http://www.qtopia.net/modules/mydownlo
 
 Scarica l'immagine sopra indicata e segui queste istruzioni: [[Flashing the Neo FreeRunner]]
 
-== Option 2: Dual-Booting between Qtopia and 2007.2 (Qtopia boots from MicroSD card) ==
+== Opzione 2: Dual-Boot tra Qtopia e la 2007.2 (Qtopia caricato dalla card MicroSD) ==
 
-Installation Requirements: 
+Requisiti d'istallazione: 
 
-# SSH shell access to 2007.2 based image of the FreeRunner through USB interface or WLAN.
-# A Desktop Linux distro (to unpack the .jffs2 image, I ran Ubuntu under VMWare)
+# Accesso tramite shell SSH all'immagine 2007.2 del Freerunner tramite interfaccia USB o WLAN.
+# Una distribuzione anche desktop Linux (per scompattare l'immagine .jffs2, è funzionato anche usando una Ubuntu  virtualizzata con VMWare)
 
 
-=== Preparing the SD card ===
+=== Preparare la scheda SD ===
 
 See the [[Booting from SD#Prepare the SD card| Preparing the SD Card]] section of the [[Booting from SD]] page for partitioning and formatting instructions.  After you complete the "Formatting the SD Card" steps, return here and execute the following:
 
