path cant be relative from /etc

--- a/Building_FSO.mw
+++ b/Building_FSO.mw
@@ -269,7 +269,7 @@ Add the line:
 
 Add one line per 'third-party' gtk theme you've installed.  For example, openmoko-mediaplayer is not packaged with FSO:
 
- include "openmoko-mediaplayer"
+ include "/usr/share/themes/Moko/gtk-2.0/openmoko-mediaplayer"
 
 '''Step 5) Other tweaks
 
