added info about theme engine.  this restores appropriate scrollbars, etc...

--- a/Building_FSO.mw
+++ b/Building_FSO.mw
@@ -249,6 +249,7 @@ Currently GTK is not well supported in the FSO build. To use GTK applications yo
 
  opkg install moko-gtk-theme
  opkg install openmoko-icon-theme-standard2
+ opkg install moko-gtk-engine
 
 '''Step 2) Enable Theme'''
  
