--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -73,7 +73,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Broadcom BCM2940 (DVB-H&T)  || NA || NA || Small chip dimension and highly integration || [http://zh-tw.broadcom.com/products/Cellular/Mobile-TV-Receivers/BCM2940]
 |-
-| CSR Unifi UF1052  || NA || NA || NA|| [http://www.csr.com/downloads/CS-118446-TOP1%20UF1052.pdf]
+| CSR Unifi UF1052 (WIFI)|| NA || NA || NA|| [http://www.csr.com/downloads/CS-118446-TOP1%20UF1052.pdf]
 |-
 |}
 
