/* Things to know */

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -64,7 +64,17 @@ Edit the USB section to look like this:
  	up echo nameserver 208.67.220.220 >/etc/resolv.conf 
  	#up echo nameserver 192.168.0.200 >/etc/resolv.conf
 
-Now edit the Multiverse repository (/etc/opkg/Multiverse-feed.conf) to fix a typo: Remove the duplicate "/" before Multiverse. (Restart your phone)
+Now edit the Multiverse repository (/etc/opkg/Multiverse-feed.conf) to fix a typo: Remove the duplicate "/" before Multiverse. 
+
+Create a file named zecke.conf and paste this into it to get the latest unofficial updates. (Temporary Server)
+
+ src/gz zecke-all http://people.openmoko.org/~zecke/om2008.8-dev/all
+ src/gz zecke-arm http://people.openmoko.org/~zecke/om2008.8-dev/armv4t
+ src/gz zecke-i686 http://people.openmoko.org/~zecke/om2008.8-dev/i686
+ src/gz zecke-neo http://people.openmoko.org/~zecke/om2008.8-dev/neo1973
+ src/gz zecke-gta02 http://people.openmoko.org/~zecke/om2008.8-dev/om-gta02
+
+(Restart your phone)
 
 
 Now that you are able to install software, It is a good time to install "illume-config" to can gain access to more advanced power management features and to change the look of the GUI through the wrench that will now appear in the top bar. (Restart your phone)
