--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -100,12 +100,18 @@ Would RINEX be an appropriate general format for internal storage? No.
 It's an exchange format but it's intended to include data required to perform post-processing.
 It stores direct satellite observations, not things needed for navigation like calculated position.
 
-Specs are here: ftp://ftp.unibe.ch/aiub/rinex/
-
 This guy wrote a program that takes Ublox Antares 4 data and writes it as RINEX data.
 http://home.comcast.net/~dmilbert/softs/ant2rin.htm
 
-GPX would accomodate everything we need but it's ASCII XML and that means 1/2 the file is just XML formatting. We'd probably be better off recording raw NMEA streams.
+GPX would accommodate everything we need but it's ASCII XML and that means 1/2 the file is just XML formatting. It might be possible to used tokenized GPX to make it more compact.
+
+== External links ==
+
+GPSd http://gpsd.berlios.de/
+
+GPX http://www.topografix.com/gpx.asp http://en.wikipedia.org/wiki/GPX_(data_transfer)
+
+RINEX specs ftp://ftp.unibe.ch/aiub/rinex/
 
 == People working on this project ==
 
