/* People working on this project */

--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -115,6 +115,6 @@ RINEX specs ftp://ftp.unibe.ch/aiub/rinex/
 
 == People working on this project ==
 
-[[User:Brian H Wilson]] blabbing a lot and wishing he had more time to work on this.
+[[User:Brian H Wilson]] is blabbing a lot here and wishing he had more time to work on this.
 
 [[Category: GPS]]
