--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -107,11 +107,17 @@ GPX would accommodate everything we need but it's ASCII XML and that means 1/2 t
 
 == External links ==
 
+ESRI ArcPad http://www.tdsway.com/products/solo_field
+
 GPSd http://gpsd.berlios.de/
 
 GPX http://www.topografix.com/gpx.asp http://en.wikipedia.org/wiki/GPX_(data_transfer)
 
 RINEX specs ftp://ftp.unibe.ch/aiub/rinex/
+
+TDS Solo Field http://www.tdsway.com/products/solo_field
+
+Trimble Terrasync http://www.trimble.com/terrasync.shtml
 
 == People working on this project ==
 
