/* (Optional) Install Known Good Kernel */

--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -28,6 +28,8 @@ This kernel was build by Marcel_M and has some important patches in it such as r
 
 Question: is this kernel for Neo1973/GTA01 only? Is there a good/recommended kernel for Freerunner/GTA02?
 
+Use a new image kernel from :"http://buildhost.openmoko.org/daily/freerunner/", it works fine ;)
+
 == (Optional) Recompiling Kernel to Add Drivers ==
 (Based on http://lists.openmoko.org/pipermail/support/2008-August/001240.html)
 
