--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3014,6 +3014,21 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 == Taiwan ==
 === Taipei ===
 {| border="1"
+| Item
+| Cost
+|-
+| Freerunner
+| 11000NTD
+|-
+| DBoard
+| 2500NTD
+|-
+|Total
+| 
+|}
+-------------
+
+{| border="1"
 | Name
 | colspan="3"| number of items
 |-
@@ -3078,8 +3093,6 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 | 1
 |}
 -------------
-080805 status update by mkl23
-
 Schedule
 
 8/17: last day to gather order
