--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3013,6 +3013,27 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 
 == Taiwan ==
 === Taipei ===
+080817 Group Sale in Taiwan
+
+Host: Mac Lin (mkl23@hotmail.com)
+
+Schedule
+
+8/17: last day to gather order
+
+I'll send request to openmoko, then we should know an exact figure (in NTD).
+
+payment: 1 week after the exact figure is known, paid by bank remittance (I'll mail my account latter)
+
+* If the number of phones is over but not exactly 10s (some of the phone couldn't have 10-pack price), I would like all of phones share the discount.
+* But the order does matter, since there might be no traveler’s pouch and headset for these not in 10-pack group.
+
+
+How to take:
+*face to face: in HsinChu
+*mail
+
+
 {| border="1"
 | Item
 | Cost
@@ -3027,7 +3048,6 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 | 
 |}
 -------------
-
 {| border="1"
 | Name
 | colspan="3"| number of items
@@ -3093,29 +3113,12 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 | 1
 |}
 -------------
-Schedule
-
-8/17: last day to gather order
-
-I'll send request to openmoko, then we should know an exact figure (in NTD).
-
-payment: 1 week after the exact figure is known, paid by bank remittance (I'll mail my account latter)
-
-* If the number of phones is over but not exactly 10s (some of the phone couldn't have 10-pack price), I would like all of phones share the discount.
-* But the order does matter, since there might be no traveler’s pouch and headset for these not in 10-pack group.
-
-
-
-How to take:
-*face to face: in HsinChu
-*mail
-
 
 FAQ:
 
-Q: 各位,要不要再組多一梯的團購,大約九月中下單子? 我趕不上這一次的團購:(  -Cruz
+Q: Will there be second group sale in Taiwan?
 
-A: 
+A: Yes, there could be more group sales in Taiwan, if there are requests.
 
 
 Q: Is it GSM900 or GSM850?
