--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3036,13 +3036,13 @@ How to take:
 
 {| border="1"
 | Item
-| Cost
+| Cost (NTD)
 |-
 | Freerunner
-| 11000NTD
+| 11000
 |-
-| DBoard
-| 2500NTD
+| DBoard (*)
+| 2500
 |-
 |Total
 | 
