--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3044,10 +3044,13 @@ How to take:
 | DBoard (*)
 | 2500
 |-
+| DBoard (*)
+| 2500
+|-
 |Total
 | 
 |}
-
+* present only if one have ordered DBoard
 
 -------------
 
