--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3013,7 +3013,7 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 
 == Taiwan ==
 === Taipei ===
-080817 Group Sale in Taiwan
+=== 080817 Group Sale in Taiwan ===
 
 Host: Mac Lin (mkl23@hotmail.com)
 
@@ -3047,7 +3047,10 @@ How to take:
 | DBoard (*)
 | 2500
 |-
-|Total
+|Postage(OM to me)
+| 
+|-
+|Postage (I deliver to you)
 | 
 |}
 * present only if one have ordered DBoard
