/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3013,8 +3013,7 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 
 == Taiwan ==
 === Taipei ===
-=== 080817 Group Sale in Taiwan ===
-
+==== 080817 Group Sale in Taiwan ====
 Host: Mac Lin (mkl23@hotmail.com)
 
 Schedule
@@ -3044,9 +3043,7 @@ How to take:
 | DBoard (*)
 | 2500
 |-
-| DBoard (*)
-| 2500
-|-
+
 |Postage(OM to me)
 | 
 |-
