--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -66,7 +66,7 @@ Edit the USB section to look like this:
 
 Now edit the Multiverse repository (/etc/opkg/Multiverse-feed.conf) to fix a typo: Remove the duplicate "/" before Multiverse. 
 
-Create a file named zecke.conf and paste this into it to get the latest unofficial updates. (Temporary Server)
+Create a file named zecke.conf and paste this into it to get the latest unofficial updates. (Temporary Repository)
 
  src/gz zecke-all http://people.openmoko.org/~zecke/om2008.8-dev/all
  src/gz zecke-arm http://people.openmoko.org/~zecke/om2008.8-dev/armv4t
