--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -1,4 +1,4 @@
-This documents quickly some key useability bits about [[Om 2008.8]], in particular for previous users of 2007.2.
+This documents quickly some key useability bits about [[Om 2008.8]] and initial setup.
 
 === Interface ===
 
