/* Things to know */

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -44,7 +44,7 @@ Press "remove" to close currently focused application.
 
 Follow this [[http://support.microsoft.com/kb/306126 guide (Windows Users)]]to share your internet with your phone.
 
-On a Linux host to share your internet connection follow this [[USB_Networking|Guide]]
+To share your internet connection on a Linux host follow this [[USB_Networking|Guide]]
 
 *If you are also behind a router you may have to change your LAN IP range in your router to avoid using 192.168.0.* as this is the same IP range as what your phone and ICS uses. (If you don't there will be an IP conflict)
 
