*Empty MediaWiki Message*

--- a/Debian.mw
+++ b/Debian.mw
@@ -65,7 +65,7 @@ Issues:
 * does not support multiple wireless networks or open hotspots that you may travel between
 
 = Software =
-== Tangogps ==
+== [[Tangogps]] ==
 
 Tangogps is a very nice GPS mapping application.  The latest version is available in Debian.
 
