/* Things to know */

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -96,7 +96,7 @@ The Media Player is basically useless due to the default theme. To install with 
 
 *The wifi doesn't work too well right now.
 
-*Accelerometers don't work right now. Although they could be very soon. [http://www.youtube.com/watch?v=K2S2rQUETwc Youtube Video]
+*Accelerometers have alpha support via [[Gestures]]
 
 *If you let the battery completely drain you will have problems booting it up. Plug it into the wall charger for a few hours and then plug it into your computer and press power.
 
