Krusell Touch Screen Pointer added

--- a/Stylus_Alternatives.mw
+++ b/Stylus_Alternatives.mw
@@ -10,4 +10,6 @@ Buy here: http://www.daydeal.com/home.php?cat=2654
 * http://www.jetmall.net/ProductImages/pic_d2_stylus.jpg - This is the default Stylus for the Cowon D2.
 Buy here: http://www.jetmall.net/index.asp?PageAction=VIEWPROD&ProdID=303)
 
+* [http://www.krusell.se//products/Accessories/?category=74 Krusell Touch Screen Pointer] - [http://tiltsite.com/2008/06/krusell-touch-screen-pointer-review/ Review]
+
 [[Category:Hardware]]
