*Empty MediaWiki Message*

--- a/I2C.mw
+++ b/I2C.mw
@@ -1,4 +1,4 @@
-The [[I2C]] is a simple communication standard intended to move small amounts of data a few inches between chips. Please See [http://en.wikipedia.org/wiki/i2c I2C Wikipedia page for additional information].
+The '''I2C'''(pronounced I square Cee) is a simple communication standard intended to move small amounts of data a few inches between chips. Please See [http://en.wikipedia.org/wiki/i2c I2C Wikipedia page for additional information].
 
 == I2C addresses ==
 
