--- a/Stylus_Alternatives.mw
+++ b/Stylus_Alternatives.mw
@@ -1,15 +1,22 @@
 A list of stylus alternatives for the Neo:
 
+'''Comfort Stylus:'''
+* This is an alternative Stylus for the Nintendo DS
+* [http://www.comfortstylus.com/index03.jpg Image]
+* Buy here: http://www.comfortstylus.com/
 
-* http://www.comfortstylus.com/index03.jpg - This is an alternative Stylus for the Nintendo DS.
-Buy here: http://www.comfortstylus.com/
+'''DayDeal Stylus:'''
+* [http://www.daydeal.com/files/images6/true_tips2.jpg Image]
+* Buy here: http://www.daydeal.com/home.php?cat=2654
 
-*DayDeal styluses
-Buy here: http://www.daydeal.com/home.php?cat=2654
+'''Stylus for COWON D2:'''
+* This is the default stylus for the Cowon D2
+* [http://www.jetmall.net/ProductImages/pic_d2_stylus.jpg Image]
+* Buy here: http://www.jetmall.net/index.asp?PageAction=VIEWPROD&ProdID=303
 
-* http://www.jetmall.net/ProductImages/pic_d2_stylus.jpg - This is the default Stylus for the Cowon D2.
-Buy here: http://www.jetmall.net/index.asp?PageAction=VIEWPROD&ProdID=303)
-
-* [http://www.krusell.se//products/Accessories/?category=74 Krusell Touch Screen Pointer] - [http://tiltsite.com/2008/06/krusell-touch-screen-pointer-review/ Review]
+'''Krusell Touch Screen Pointer:'''
+* [http://tiltsite.com/wp-content/uploads/2008/06/triforce3.jpg Image]
+* http://www.krusell.se//products/Accessories/?category=74
+* [http://tiltsite.com/2008/06/krusell-touch-screen-pointer-review/ Review]
 
 [[Category:Hardware]]
