*Empty MediaWiki Message*

--- a/Debian.mw
+++ b/Debian.mw
@@ -118,3 +118,5 @@ To make the cursor invisible create a file called empty.cursor with this content
 Now you can execute:
  xsetroot -cursor empty.cursor empty.cursor
 and the cursor will be invisible. To make this permanent you have to invent something ;) It must be executed after zhone has finished starting up.
+[[Category:Distributions| ]]
+[[Category:Documentation]]
