--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -321,6 +321,7 @@ __NOTOC__
 *[[NAND bad blocks]]
 *[[Boot from sd card]]
 ====Software Documentation====
+*[[Debian]]
 *[[GPS Data Logger]]
 *[[Setting Date and Time]]
 *[[Simyo pppd scripts]]
