/* Neo modes */  comment on modes

--- a/WM8753.mw
+++ b/WM8753.mw
@@ -48,6 +48,7 @@ There are several sources connected via switches that can cut each source out:
  DACDAT, ADCDAT: to cpu via IIS
 
 ==== Neo modes ====
+These modes are abstract definitions, which (atm) are represented by some *.state files in /usr/share/openmoko/scenarios, to feed to alsactl tool. There is no hardware or (at this moment) driver implementation of these modes, which in turn means you can easily create other operation modes, exploiting full feature set of Wolfson mixer chip.
 
 * Off: all off.
 * GSM Handset: only "Headset Mic" off.
