/* Compatibility table (FreeRunner/GTA02) */

--- a/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
+++ b/FreeRunner_unable_to_work_with_3G_SIM_cards.mw
@@ -18,6 +18,8 @@ Please fill out following table .
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="3" border="1"
 !Carrier Name!! Error Message !! SIM Card Type!! Country !!Link to picture of SIM card!!Your name!!Did new SIM card solve problem?||Notes
 |-
+| TDC || Not working  || 2G/3G sim ||  Denmark || no pics || KB || n/a || Can't do anything GSM related
+|-
 | CHT || Unable to use GSM  ||Dont' know||  R.O.C Taiwan || no pics ||王孟蒂 Brenda Wang|| ||When I put it on my Neo, it can't dial out
 |-
 | AT&T || Unable to use GSM  || 71234 G ||  US || no pics || || || 71234 G SIM not working, 71234 O somebody in discuss thread say it could work
