*Empty MediaWiki Message*

--- a/Analog_wired_Headset.mw
+++ b/Analog_wired_Headset.mw
@@ -21,3 +21,4 @@ tip = mic electret condenser type, to ground.
       bias (power for mic) 2K2 from +3.3v(wolfson codec) 
       (+HoldButton shortcircuit to ground)
 </nowiki></pre>
+[[Category:Hardware]]
