--- a/GTA03.mw
+++ b/GTA03.mw
@@ -28,4 +28,4 @@ ps: EVB stands for Evaluation Board
 
 == Sources ==
 * http://n2.nabble.com/Weekly-Engineering-News-33-2008-tp729555p729555.html
-* http://wiki.openmoko.org/wiki/MokoForesight
+* [[MokoForesight]]
