*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -392,10 +392,10 @@ __NOTOC__
 
 
 ==Community & Users==
-===Wiki Editing===
-*[[Wiki maintain agenda]]
-*[[Wiki Maintainers]]
-*[[Openmoko Wiki Editing Guidelines]]
+
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50%" align=left| 
 
 ===Community===
 *[[CommunityRepository]]
@@ -404,11 +404,20 @@ __NOTOC__
 *[[FreeRunner: Selected Blogs and Articles]]
 *[[Openmoko:Community_Portal|Community Portal]]
 
-===[[Openmoko Local Groups]]===
+===Openmoko Local Groups===
+*[[Openmoko Local Groups]]
 
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
+
+
+===Wiki Editing===
+*[[Wiki maintain agenda]]
+*[[Wiki Maintainers]]
+*[[Openmoko Wiki Editing Guidelines]]
 ===Forums===
 *[http://forums.makeopensource.com/ Unofficial Openmoko Forums]
 *[[Discussion Forums]]
+|}
 
 ==FAQ==
 *[[FAQ]]
