--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -437,6 +437,9 @@ __NOTOC__
 *[[Openmoko Wiki Editing Guidelines/zh cn]]
 
 ==Service==
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 *[[Carriers]]
 *[[Carriers/TMobile]]
 *[[Carriers/ATT]]
@@ -446,20 +449,20 @@ __NOTOC__
 *[[Buying Interest List]]
 *[[P1 Owners]]
 *[[Shop:Speedevil]]
-
+===Shipment===
+*[[Shipping Notes]]
+*[[Where is my Freerunner?]]
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left| 
 ====GroupSales====
 *[[GroupSales]]
 *[[MadridGroupSale]]
 *[[IberiaGroupSale]]
 *[[GroupSales/Torino]]
 *[[Group Sales Australia]]
-
 ===Provider===
 *[[Neo1973 compatible cellphone providers]]
 
-===Shipment===
-*[[Shipping Notes]]
-*[[Where is my Freerunner?]]
+|}
 
 ==Wish List==
 ===Hardware Ideas===
