--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -168,15 +168,15 @@ Status : 10/10
 
 '''Group 1'''
 
-* Dimitar Staykov, [http://wiki.openmoko.org/wiki/Special:Emailuser/OpenMitko Contact] $-
-* Geo, [http://wiki.openmoko.org/wiki/Special:Emailuser/geomer Contact] $-
-* Iceman, [http://wiki.openmoko.org/wiki/Special:Emailuser/ice Contact], 02 July 2008  ([http://www.pulster.de/engl/openmoko.htm Pulster]) $+
-* luchoh, [http://wiki.openmoko.org/wiki/Special:Emailuser/luchoh Contact], 26 June 2008 $+
-* mkaramihalev,  [http://wiki.openmoko.org/wiki/Special:Emailuser/mkaramihalev Contact], 12 July 2008 $+
-* UniXSouL,  [http://wiki.openmoko.org/wiki/Special:Emailuser/UniXSouL Contact], 12 July 2008 $+
-* phalaaxx,  [http://wiki.openmoko.org/wiki/Special:Emailuser/phalaaxx Contact], 22 July 2008 (2 units) $+
-* streamDog,  [http://wiki.openmoko.org/wiki/Special:Emailuser/streamDog Contact], 23 July 2008 $+
-* danov2, [http://wiki.openmoko.org/wiki/Special:Emailuser/danov2 Contact], 30 June 2008 $+
+* Dimitar Staykov, [http://wiki.openmoko.org/wiki/Special:Emailuser/OpenMitko Contact]
+* Geo, [http://wiki.openmoko.org/wiki/Special:Emailuser/geomer Contact]
+* Iceman, [http://wiki.openmoko.org/wiki/Special:Emailuser/ice Contact], 02 July 2008  ([http://www.pulster.de/engl/openmoko.htm Pulster])
+* luchoh, [http://wiki.openmoko.org/wiki/Special:Emailuser/luchoh Contact], 26 June 2008
+* mkaramihalev,  [http://wiki.openmoko.org/wiki/Special:Emailuser/mkaramihalev Contact], 12 July 2008
+* UniXSouL,  [http://wiki.openmoko.org/wiki/Special:Emailuser/UniXSouL Contact], 12 July 2008
+* phalaaxx,  [http://wiki.openmoko.org/wiki/Special:Emailuser/phalaaxx Contact], 22 July 2008 (2 units)
+* streamDog,  [http://wiki.openmoko.org/wiki/Special:Emailuser/streamDog Contact], 23 July 2008
+* danov2, [http://wiki.openmoko.org/wiki/Special:Emailuser/danov2 Contact], 30 June 2008
 
 '''Group 2''' 
 
@@ -184,7 +184,7 @@ Status : 4/10
 
 * Vernim, [http://wiki.openmoko.org/wiki/Special:Emailuser/Vernim Contact]
 * nninov, [http://wiki.openmoko.org/wiki/Special:Emailuser/nninov Contact], 26 June 2008
-* jdivanov, [http://wiki.openmoko.org/wiki/Special:Emailuser/jdivanov Contact], 16 June 2008 $-
+* jdivanov, [http://wiki.openmoko.org/wiki/Special:Emailuser/jdivanov Contact], 16 June 2008
 * ZMan, [http://wiki.openmoko.org/wiki/Special:Emailuser/ZMan Contact], 14 August 2008
 
 == Canada ==
