*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -436,10 +436,11 @@ __NOTOC__
 *[[Openmoko Wiki Editing Guidelines]]
 *[[Openmoko Wiki Editing Guidelines/zh cn]]
 
-==Service==
+
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
+==Service==
 *[[Carriers]]
 *[[Carriers/TMobile]]
 *[[Carriers/ATT]]
@@ -461,10 +462,12 @@ __NOTOC__
 *[[Group Sales Australia]]
 ===Provider===
 *[[Neo1973 compatible cellphone providers]]
-
 |}
 
 ==Wish List==
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left| 
 ===Hardware Ideas===
 *[[Kuai Yi Dian GM519]]
 *[[Wishlist:Expansion Back]]
@@ -478,7 +481,12 @@ __NOTOC__
 *[[Hardware:NearlyTouchScreen]]
 *[[Modular phone]]
 *[[Digital Television]]
+===Calling Feature===
+*[[Wishlist:Least Cost Routing]]
+*[[Wishlist:Headset Emulator]]
+*[[Anti-Theft Mode]]
 
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left|
 ===Software Ideas===
 *[[Wishlist:Data Traffic Monitor]]
 *[[Wishlist:Extension Framework]]
@@ -496,10 +504,8 @@ __NOTOC__
 *[[Wishlist:Software:GPS proxy]]
 *[[Server:WebProxy]]
 
-===Calling Feature===
-*[[Wishlist:Least Cost Routing]]
-*[[Wishlist:Headset Emulator]]
-*[[Anti-Theft Mode]]
+|}
+
 
 ==Events==
 *[[SFBayAreaGetStarted]]
