*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -455,11 +455,10 @@ __NOTOC__
 *[http://forums.makeopensource.com/ Unofficial Openmoko Forums]
 *[[Discussion Forums]]
 |}
-
+==Service==
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
-==Service==
 *[[Carriers]]
 *[[Carriers/TMobile]]
 *[[Carriers/ATT]]
@@ -482,7 +481,9 @@ __NOTOC__
 ===Provider===
 *[[Neo1973 compatible cellphone providers]]
 |}
-
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+|-
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 ==FAQ==
 *[[FAQ]]
 *[[SH1 FAQ]]
@@ -499,8 +500,9 @@ __NOTOC__
 *[[Explaining carriers versus phones]]
 *[[Openmoko Wiki Editing Guidelines]]
 *[[Openmoko Wiki Editing Guidelines/zh cn]]
-
-
+<br>
+<br>
+! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 ==Events==
 *[[SFBayAreaGetStarted]]
 *[[Summer of Code 2008]]
@@ -522,11 +524,7 @@ __NOTOC__
 *[[Geocaching]]
 *[[Personas]]
 
-==Todo==
-*[[Wiki Maintainers]]
-*[[Translation]]
-*[[Translation HOWTO]]
-*[[Freshman todo]]
+|}
 
 [[Category:Information| ]]
 [[Category:Openmoko| ]]
