*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -2,7 +2,7 @@ __NOTOC__
 ==Introduction Of Openmoko==
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
 |-
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
+! style="background:#ffffcc;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " |  
 <div align=left>
 *[[Introduction]]
 *[[OpenmokoFramework]]
@@ -12,7 +12,7 @@ __NOTOC__
 *[[Current events]]
 *[[Business Development]]
 </div>
-! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " | 
+! style="background:#ffffcc;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " | 
 <div align=left>
 *[[Trademark Policy]]
 *[[License]]
