--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -25,7 +25,7 @@ __NOTOC__
 ==Hardware ==
 {{Hardware}}
 ===GTA01===
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #33cccc; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 *[[Neo1973]]
@@ -77,7 +77,7 @@ __NOTOC__
 *[[Neo1973 as car gadget]]
 *[[Neo1973 as radio replacement]]
 |}
-==FreeRunner==
+===FreeRunner===
 {| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #00cccc; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
