*Empty MediaWiki Message*

--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -25,7 +25,7 @@ __NOTOC__
 ==Hardware ==
 {{Hardware}}
 ===GTA01===
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #33cccc; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 *[[Neo1973]]
@@ -78,7 +78,7 @@ __NOTOC__
 *[[Neo1973 as radio replacement]]
 |}
 ===FreeRunner===
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #00cccc; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |
 
@@ -98,7 +98,7 @@ __NOTOC__
 |}
 
 ==Software==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #66cccc; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50%" align=left |  
 
@@ -205,7 +205,7 @@ __NOTOC__
 * [[Zedlock]]
 
 |}
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #669900; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
 ====[[Distributions]]====
@@ -234,7 +234,7 @@ __NOTOC__
 *[[Bug Report]]
 
 ==UI Design==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 ===User Interface Guide===
@@ -258,7 +258,7 @@ __NOTOC__
 |}
 
 =Test=
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left |  
 === Hardware ===
@@ -392,7 +392,7 @@ __NOTOC__
 
 
 ==Wish List==
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #00cc99; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left| 
 ===Hardware Ideas===
@@ -435,7 +435,7 @@ __NOTOC__
 
 ==Community & Users==
 
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50%" align=left| 
 ===Community===
@@ -481,7 +481,7 @@ __NOTOC__
 ===Provider===
 *[[Neo1973 compatible cellphone providers]]
 |}
-{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #ffffff; background:#ffffff; width:100%;"
+{| class="wikitable" cellspacing="1" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #eeeeee; background:#ffffff; width:100%;"
 |-
 ! style="background:#ffffff;border-left:1px solid #ffffff;border-right:1px ; border-top:2px solid 75d806; border:1px solid #ffffff; width:50% " align=left | 
 ==FAQ==
